# peakvoltmeter

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: lint.yml  test.yml
peakvoltmeter/: Cargo.toml
peakvoltmeter/src/: application.rs  main.rs  rms_widget.rs  settings.rs  time.rs  trigger.rs  ui.rs
peakvoltmeter/src/frequency_widget/: chart.rs  mod.rs
peakvoltmeter/src/harmonics/: chart.rs  mod.rs
peakvoltmeter/src/peak_sqrt/: mod.rs
peakvoltmeter/src/peak_sqrt_widget/: chart.rs  mod.rs
peakvoltmeter/src/rms_trend/: chart.rs  mod.rs
peakvoltmeter/src/time_chart/: chart.rs  mod.rs  trigger.rs
peakvoltmeter/src/ui/: harmonics.rs  mod.rs  rms_trend.rs  time_chart.rs
simulator/: Cargo.toml
simulator/src/: error.rs  main.rs  voltmeter.rs
src/: main.rs  trigger.rs  ui.rs
