[package]
name = "peakvoltmeter"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
conductor = { git = "ssh://git@github.com/conductor-dev/conductor.git", rev = "cd8634e" }
eframe = "0.29.1"
egui = "0.29.1"
egui_plot = "0.29.0"
rustfft = "6.2.0"
